@@ -182,4 +182,27 @@ test.run(status=2, stderr="scons: \\*\\*\\* \\[one.out\\] Error 2\n")
 
 
 
+# Test syntax errors when trying to expand construction variables.
+test.write('SConstruct', """\
+env = Environment()
+env.subst('$foo.bar.3.0')
+""")
+
+test.run(status=2, stderr="""
+scons: \*\*\* Syntax error trying to evaluate `\$foo\.bar\.3\.0'
+File "SConstruct", line 2, in \?
+""")
+
+test.write('SConstruct', """\
+env = Environment()
+env.subst_list('$foo.3.0.x')
+""")
+
+test.run(status=2, stderr="""
+scons: \*\*\* Syntax error trying to evaluate `\$foo\.3\.0\.x'
+File "SConstruct", line 2, in \?
+""")
+
+
+
 test.pass_test()
